--- a/versions.properties
+++ b/versions.properties
@@ -11,4 +11,6 @@ version.androidx.appcompat=1.2.0
 
 version.androidx.compose.material=1.0.0-alpha07
 
+version.androidx.datastore=1.0.0-alpha02
+
 version.com.github.tfcporciuncula..flow-preferences=1.3.3
