--- a/versions.properties
+++ b/versions.properties
@@ -9,8 +9,11 @@ version.androidx.appcompat=1.2.0
 ##             # available=1.3.0-alpha01
 ##             # available=1.3.0-alpha02
 
-version.androidx.compose.material=1.0.0-alpha07
+version.androidx.compose.material=1.0.0-alpha08
 
 version.androidx.datastore=1.0.0-alpha02
+##             # available=1.0.0-alpha03
+##             # available=1.0.0-alpha04
+##             # available=1.0.0-alpha05
 
 version.com.github.tfcporciuncula..flow-preferences=1.3.3
