--- a/versions.properties
+++ b/versions.properties
@@ -8,12 +8,18 @@
 version.androidx.appcompat=1.2.0
 ##             # available=1.3.0-alpha01
 ##             # available=1.3.0-alpha02
+##             # available=1.3.0-beta01
 
-version.androidx.compose.material=1.0.0-alpha09
+version.androidx.compose.material=1.0.0-alpha11
 
 version.androidx.datastore=1.0.0-alpha02
 ##             # available=1.0.0-alpha03
 ##             # available=1.0.0-alpha04
 ##             # available=1.0.0-alpha05
+##             # available=1.0.0-alpha06
 
 version.com.github.tfcporciuncula..flow-preferences=1.3.3
+
+plugin.android=7.0.0-alpha05
+
+version.kotlin=1.4.21-2
