--- a/versions.properties
+++ b/versions.properties
@@ -7,19 +7,21 @@
 
 plugin.android=7.0.0-alpha05
 
+version.androidx.activity=1.3.0-alpha03
+
 version.androidx.appcompat=1.2.0
 ##             # available=1.3.0-alpha01
 ##             # available=1.3.0-alpha02
 ##             # available=1.3.0-beta01
 
-version.androidx.compose.material=1.0.0-alpha12
+version.androidx.compose.material=1.0.0-beta01
 
-version.androidx.datastore=1.0.0-alpha02
-##             # available=1.0.0-alpha03
-##             # available=1.0.0-alpha04
-##             # available=1.0.0-alpha05
-##             # available=1.0.0-alpha06
+version.androidx.datastore=1.0.0-alpha07
 
-version.com.github.tfcporciuncula..flow-preferences=1.3.3
+version.com.github.tfcporciuncula..flow-preferences=1.3.4
+
+version.dev.chrisbanes.accompanist..accompanist-insets=0.6.1
 
 version.kotlin=1.4.30
+## # available=1.4.31
+## # available=1.5.0-M1
