--- a/versions.properties
+++ b/versions.properties
@@ -7,21 +7,20 @@
 
 plugin.android=7.0.0-alpha05
 
-version.androidx.activity=1.3.0-alpha03
+version.androidx.activity=1.3.0-alpha05
 
 version.androidx.appcompat=1.2.0
 ##             # available=1.3.0-alpha01
 ##             # available=1.3.0-alpha02
 ##             # available=1.3.0-beta01
+##             # available=1.3.0-rc01
 
-version.androidx.compose.material=1.0.0-beta01
+version.androidx.compose.material=1.0.0-beta03
 
-version.androidx.datastore=1.0.0-alpha07
+version.androidx.datastore=1.0.0-alpha08
 
-version.com.github.tfcporciuncula..flow-preferences=1.3.4
-
-version.dev.chrisbanes.accompanist..accompanist-insets=0.6.1
-
-version.kotlin=1.4.30
-## # available=1.4.31
+version.kotlin=1.4.31
+## # available=1.4.32
 ## # available=1.5.0-M1
+
+version.com.google.accompanist..accompanist-insets=0.7.0
