--- a/versions.properties
+++ b/versions.properties
@@ -7,11 +7,7 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-plugin.android=7.0.0-alpha05
-
-version.androidx.activity=1.3.0-alpha05
-##            # available=1.3.0-alpha06
-##            # available=1.3.0-alpha07
+version.androidx.activity=1.3.0-alpha07
 
 version.androidx.appcompat=1.2.0
 ##             # available=1.3.0-alpha01
@@ -19,21 +15,14 @@ version.androidx.appcompat=1.2.0
 ##             # available=1.3.0-beta01
 ##             # available=1.3.0-rc01
 
-version.androidx.compose.material=1.0.0-beta03
-##                    # available=1.0.0-beta04
-##                    # available=1.0.0-beta05
-##                    # available=1.0.0-beta06
+version.androidx.compose.material=1.0.0-beta06
 
-version.androidx.datastore=1.0.0-alpha08
-##             # available=1.0.0-beta01
+version.androidx.datastore=1.0.0-beta01
 
 version.google.accompanist=0.9.1
 
-version.kotlin=1.4.31
-## # available=1.4.32
+version.kotlin=1.4.32
 ## # available=1.5.0-M1
 ## # available=1.5.0-M2
 ## # available=1.5.0-RC
 ## # available=1.5.0
-
-version.com.google.accompanist..accompanist-insets=0.7.0
