--- a/versions.properties
+++ b/versions.properties
@@ -7,22 +7,18 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-version.androidx.activity=1.3.0-alpha07
+version.androidx.activity=1.3.0-beta01
 
-version.androidx.appcompat=1.2.0
-##             # available=1.3.0-alpha01
-##             # available=1.3.0-alpha02
-##             # available=1.3.0-beta01
-##             # available=1.3.0-rc01
+version.androidx.appcompat=1.3.0
+##             # available=1.4.0-alpha01
+##             # available=1.4.0-alpha02
 
-version.androidx.compose.material=1.0.0-beta06
+version.androidx.compose.material=1.0.0-beta08
 
 version.androidx.datastore=1.0.0-beta01
 
-version.google.accompanist=0.9.1
+version.google.accompanist=0.11.1
 
-version.kotlin=1.4.32
-## # available=1.5.0-M1
-## # available=1.5.0-M2
-## # available=1.5.0-RC
-## # available=1.5.0
+version.kotlin=1.5.10
+## # available=1.5.20-M1
+## # available=1.5.20-RC
