--- a/versions.properties
+++ b/versions.properties
@@ -7,20 +7,21 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-version.androidx.activity=1.3.0-rc01
+version.androidx.activity=1.3.0-rc02
 
 version.androidx.appcompat=1.3.0
 ##             # available=1.4.0-alpha01
 ##             # available=1.4.0-alpha02
 ##             # available=1.4.0-alpha03
 
-version.androidx.compose.material=1.0.0-rc01
+version.androidx.compose.material=1.0.0-rc02
 
 version.androidx.datastore=1.0.0-rc01
 
-version.google.accompanist=0.13.0
+version.google.accompanist=0.14.0
 
 version.kotlin=1.5.10
 ## # available=1.5.20-M1
 ## # available=1.5.20-RC
 ## # available=1.5.20
+## # available=1.5.21
