--- a/versions.properties
+++ b/versions.properties
@@ -18,6 +18,8 @@ version.androidx.compose.material=1.1.0
 ##                    # available=1.2.0-alpha02
 ##                    # available=1.2.0-alpha03
 
+version.androidx.compose.material3=1.0.0-alpha05
+
 version.androidx.datastore=1.0.0
 
 version.google.accompanist=0.23.0
