--- a/versions.properties
+++ b/versions.properties
@@ -18,7 +18,7 @@ version.androidx.compose.material=1.1.0
 ##                    # available=1.2.0-alpha02
 ##                    # available=1.2.0-alpha03
 
-version.androidx.compose.material3=1.0.0-alpha05
+version.androidx.compose.material3=1.0.1
 
 version.androidx.datastore=1.0.0
 
